# thirdpass

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  main.yaml
blog/: README.md  cargo-vet-popular-dependency-coverage.md  cargo-vet-weak-long-tail-coverage.md  closing-cargo-vet-top-100-gaps.md
thirdpass/: Cargo.toml  README.md
thirdpass-core/: Cargo.toml
thirdpass-core/src/: lib.rs  registry.rs  schema.rs
thirdpass-core/src/extension/: common.rs  mod.rs  process.rs
thirdpass-core/src/extension/commands/: mod.rs  static_data.rs
thirdpass-core/src/package/: analysis.rs  archive.rs  batch.rs  manifest.rs  mod.rs  parcel.rs  target.rs  workspace.rs
thirdpass-core/src/schema/: assignment.rs  mod.rs  package.rs  review.rs  submission.rs
thirdpass-lib/: Cargo.toml
thirdpass/.thirdpass/reviews/crates.io/adler2/2.0.1/4edd4f80ca56ab77b70082e029139b374197e64eb21a353a0e22ef25e0a47d82/: review-0037fc6a9708a8b1.json  review-1eb9003b2b49df21.json  review-4c559ebfffee548e.json  review-713cb9e211af0c2b.json  review-7b3bccde29c41e8b.json  review-8d2dc6ee618d3b50.json  review-9582e13b4cfefcc3.json  review-bf97155d6c46f4c9.json
thirdpass/.thirdpass/reviews/crates.io/aho-corasick/0.7.20/6c92792d3480aafab132fd62056cc9af3782386aecffdb7b7f7d6b6bba333530/: review-04ef62879bc4db9b.json  review-43aa8d82681c6771.json  review-60ae31830dbc6145.json  review-65eea18a1a445665.json  review-68fa0945d90150b0.json  review-781edb7bd19491b0.json  review-87fb0b7bf8e77948.json  review-8bda00e62b726853.json  review-8d3f140b49ec7768.json  review-bc9271963438807e.json  review-e32b03408b8b0a8e.json
thirdpass/.thirdpass/reviews/crates.io/aho-corasick/1.1.4/76a62e8137727dda12e5f8de026e892affaff8b839f9690ff89bbd580070eba7/: review-15dbc24057885dea.json  review-75f508acd6ff21b9.json  review-b195cd090d8cf3cd.json  review-f6284dc4bce9f920.json
thirdpass/src/: main.rs  test_support.rs
thirdpass/src/command/: admin.rs  config.rs  extension.rs  mod.rs  review.rs  review_any.rs  review_deps.rs  review_queue.rs
thirdpass/src/command/check/: fs.rs  mod.rs  output.rs  package.rs  report.rs  table.rs
thirdpass/src/command/setup/: fs.rs  mod.rs
thirdpass/src/common/: api.rs  mod.rs
thirdpass/src/common/config/: core.rs  mod.rs
thirdpass/src/common/fs/: archive.rs  mod.rs
thirdpass/src/extension/: common.rs  mod.rs  process.rs
thirdpass/src/extension/manage/: github.rs  mod.rs
thirdpass/src/package/: common.rs
thirdpass/src/peer/: common.rs  mod.rs
thirdpass/src/review/: active.rs  dependency_package.rs  dependency_plan.rs  dependency_queue.rs  dependency_reuse.rs  fs.rs  mod.rs  project.rs  remote.rs  submission.rs  workspace.rs
thirdpass/src/review/comment/: common.rs
thirdpass/src/review/common/: metadata.rs  mod.rs  security_summary.rs
thirdpass/src/review/dependencies/: discovery.rs  mod.rs  workflow.rs
thirdpass/src/review/submission/: itest.rs
thirdpass/src/review/tool/: agent.rs  mod.rs  vscode.rs
thirdpass/src/review/tool/agent/: claude.rs  codex.rs  metrics.rs  mod.rs  prompt.rs
vouch/: Cargo.toml  README.md
vouch-lib/: Cargo.toml
vouch-lib/src/: lib.rs  schema.rs
vouch/src/: main.rs
(+52 files in other folders)
