[package]
name = "thirdpass"
version = "0.4.1"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2018"
repository = "https://github.com/thirdpass-org/thirdpass"
license = "MIT"
default-run = "thirdpass"
description = "A multi-ecosystem package code review system."

[dependencies]
thirdpass-core = { path = "../thirdpass-core", version = "0.4.0", features = ["package", "registry"] }
thirdpass-py = { path = "../../extensions/thirdpass-py", version = "0.4.0" }
thirdpass-js = { path = "../../extensions/thirdpass-js", version = "0.4.0" }
thirdpass-rs = { path = "../../extensions/thirdpass-rs", version = "0.2.0" }

anyhow = "1.0.31"
structopt = "0.3.21"
env_logger = "0.8.2"
log = "0.4.8"
regex = "1.3.9"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.1"
maplit = "1.0.2"
dialoguer = "0.8.0"
indicatif = "0.17"
console = "0.15"
tempfile = "3"

directories = "3.0.1"

url = { version = "2.1.1", features = ["serde"] }
reqwest = { version = "0.11.0", default-features = false, features = ["blocking", "rustls-tls", "json"] }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.13"
uuid = { version = "0.8.2", features = ["v4"] }
prettytable-rs = "0.8.0"
atty = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }
